@@ -11,6 +11,11 @@ namespace AjLanguage.Hosting.Remoting
 {
     public class RemotingHostServer : Host
     {
+        private int port;
+        private string name;
+        private string hostname;
+        private ObjRef objref;
+
         public RemotingHostServer(int port, string name)
             : this(new Machine(false), port, name)
         {
@@ -19,6 +24,10 @@ namespace AjLanguage.Hosting.Remoting
         public RemotingHostServer(Machine machine, int port, string name)
             : base(machine)
         {
+            this.port = port;
+            this.name = name;
+            // TODO review this name, get machine name
+            this.hostname = "localhost";
             // According to http://www.thinktecture.com/resourcearchive/net-remoting-faq/changes2003
             // in order to have ObjRef accessible from client code
             BinaryServerFormatterSinkProvider serverProv = new BinaryServerFormatterSinkProvider();
@@ -33,7 +42,20 @@ namespace AjLanguage.Hosting.Remoting
             // end of "according"
 
             // TODO review other options to publish an object
-            RemotingServices.Marshal(this, name);
+            this.objref= RemotingServices.Marshal(this, name);
+        }
+
+        public void Stop()
+        {
+            RemotingServices.Unmarshal(this.objref);
+        }
+
+        public override string Address
+        {
+            get
+            {
+                return string.Format("tcp://{0}:{1}/{2}", this.hostname, this.port, this.name);
+            }
         }
     }
 }
